<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Учет посещаемости</string>
    <string name="basic_sample">Basic SCL Sample</string>
    <string name="left_thumb">Left Thumb</string>
    <string name="left_index">Left Index</string>
    <string name="left_middle">Left Middle</string>
    <string name="left_ring">Left Ring</string>
    <string name="left_little">Left Little</string>
    <string name="right_thumb">Right Thumb</string>
    <string name="right_index">Right Index</string>
    <string name="right_middle">Right Middle</string>
    <string name="right_ring">Right Ring</string>
    <string name="right_little">Right Little</string>
    <string name="delete_all">Delete All</string>
    <string name="identify">Identify</string>
    <string name="grab">Grab Image</string>
    <string name="navigate_raw">Navigate - raw mode</string>
    <string name="navigate_mouse">Navigate - mouse mode</string>
    <string name="navigate_discrete">Navigate - discrete mode</string>
    <string name="quit">Quit</string>
    <string name="OK">OK</string>
    <string name="title_activity_login">Учет посещаемости</string>
    <string name="hello_world">Hello world!</string>
    <string name="admin">Администратор</string>
    <string name="student">Студент</string>
    <string name="title_activity_main">Сканирование</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_student">Добавление студента</string>
    <string name="title_activity_scan">Сканирование</string>
    <string name="title">Учет посещаемости</string>
    <string name="title_start_scan">Начать сканирование</string>
    <string name="title_list">Список занятий</string>
    <string name="title_section0">Добавить студента</string>
    <string name="title_section1">Экспорт</string>
    <string name="title_section2">Посещение студента</string>
    <string name="title_section3">Выход</string>
    <string name="title_section_im">Расписание из файла</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_list">Список занятий</string>
    <string name="title_activity_list_details">Список отметившихся</string>
    <string name="title_activity_student_list">Список студентов</string>
    <string name="title_activity_student_att_list">Список посещений</string>
    <string name="title_activity_change_pass">Смена пароля</string>
    <string name="title_load_sh">Расписание с сайта</string>
    <string name="title_activity_student">Студент</string>
    <string name="scan_button">Начать сканирование</string>
    <string name="list_button">Посещения</string>
    <string name="title_activity_change_student">Изменение студента</string>
    <string name="refresh_scan_activity">Обновить</string>

</resources>