<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout01" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
    
    <RelativeLayout 
    android:id="@+id/RelativeLayout02" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
    
	    <LinearLayout
	    android:id="@+id/EnrollmentLeftLayout" 
	    android:orientation="vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    >
	    <Button 
	        android:text="@string/left_thumb" 
	        android:id="@+id/ButtonLeftThumb" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	    />
	    <Button 
	        android:text="@string/left_index" 
	        android:id="@+id/ButtonLeftIndex" 
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	    />
	    <Button 
	        android:text="@string/left_middle" 
	        android:id="@+id/ButtonLeftMiddle" 
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	    />
	    <Button 
	        android:text="@string/left_ring" 
	        android:id="@+id/ButtonLeftRing" 
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	    />
	    
	    <Button 
	        android:text="@string/left_little" 
	        android:id="@+id/ButtonLeftLittle" 
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	    />
	    </LinearLayout>
	         
	    <LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    >    
	    <Button 
	        android:text="@string/right_thumb" 
	        android:id="@+id/ButtonRightThumb" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	    />
	    <Button 
	        android:text="@string/right_index" 
	        android:id="@+id/ButtonRightIndex" 
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	    />
	    <Button 
	        android:text="@string/right_middle" 
	        android:id="@+id/ButtonRightMiddle" 
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	    />
	    <Button 
	        android:text="@string/right_ring" 
	        android:id="@+id/ButtonRightRing" 
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	    />
	    <Button 
	        android:text="@string/right_little" 
	        android:id="@+id/ButtonRightLittle" 
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	    />
	    </LinearLayout>
	    
	    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >
        <Button 
            android:text="@string/delete_all" 
            android:id="@+id/ButtonDeleteAll" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:visibility="gone"
        />
	    <Button 
	        android:text="@string/identify" 
	        android:id="@+id/ButtonVerifyAll" 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	    />
	    <Button 
            android:text="@string/grab" 
            android:id="@+id/ButtonGrab" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
        />
	    <Button 
            android:text="@string/navigate_raw" 
            android:id="@+id/ButtonNavigateRaw" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
        />
        <Button 
            android:text="@string/navigate_mouse" 
            android:id="@+id/ButtonNavigateMouse" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
        />
        <Button 
            android:text="@string/navigate_discrete" 
            android:id="@+id/ButtonNavigateDiscrete" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
        />
        <Button 
            android:text="@string/quit" 
            android:id="@+id/ButtonQuit" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
        />
        </LinearLayout>
    </RelativeLayout>

    <TextView  
        android:id="@+id/EnrollmentTextView"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent" 
    android:layout_below="@+id/RelativeLayout02" android:gravity="center_vertical|center_horizontal"/>
</RelativeLayout>

    


